crates/backyard-lexer/tests/snapshots/lexer__id.snap
---
source: crates/backyard-lexer/tests/lexer.rs
expression: tokens
snapshot_kind: text
---
- token_type: Identifier
  value:
    - 115
    - 97
    - 109
    - 112
    - 108
    - 101
    - 95
    - 105
    - 100
  line: 1
  column: 0
  offset: 0
