crates/backyard-lexer/tests/snapshots/lexer__lt.snap
---
source: crates/backyard-lexer/tests/lexer.rs
expression: tokens
snapshot_kind: text
---
- token_type: Variable
  value:
    - 97
  line: 1
  column: 0
  offset: 0
- token_type: BitwiseShiftLeftAssignment
  value:
    - 60
    - 60
    - 61
  line: 1
  column: 3
  offset: 3
- token_type: Variable
  value:
    - 98
  line: 1
  column: 7
  offset: 7
- token_type: IsLesserOrEqual
  value:
    - 60
    - 61
  line: 1
  column: 10
  offset: 10
- token_type: Variable
  value:
    - 99
  line: 1
  column: 13
  offset: 13
- token_type: BitwiseShiftLeft
  value:
    - 60
    - 60
  line: 1
  column: 16
  offset: 16
- token_type: Variable
  value:
    - 100
  line: 1
  column: 19
  offset: 19
- token_type: IsLesser
  value:
    - 60
  line: 1
  column: 22
  offset: 22
- token_type: Variable
  value:
    - 101
  line: 1
  column: 24
  offset: 24
- token_type: IsNotEqual
  value:
    - 60
    - 62
  line: 1
  column: 27
  offset: 27
- token_type: Variable
  value:
    - 102
  line: 1
  column: 30
  offset: 30
- token_type: Spaceship
  value:
    - 60
    - 61
    - 62
  line: 1
  column: 33
  offset: 33
- token_type: Variable
  value:
    - 103
  line: 1
  column: 37
  offset: 37
- token_type: Semicolon
  value:
    - 59
  line: 1
  column: 39
  offset: 39
