crates/backyard-lexer/tests/snapshots/lexer__magic_method.snap
---
source: crates/backyard-lexer/tests/lexer.rs
assertion_line: 12
expression: tokens
snapshot_kind: text
---
- token_type: MagicMethod
  value: __construct
  line: 1
  column: 0
  offset: 0
