crates/backyard-lexer/tests/snapshots/lexer__qualified_name.snap
---
source: crates/backyard-lexer/tests/lexer.rs
expression: tokens
snapshot_kind: text
---
- token_type: QualifiedName
  value:
    - 115
    - 97
    - 109
    - 112
    - 108
    - 101
    - 95
    - 105
    - 100
    - 92
    - 97
  line: 1
  column: 0
  offset: 0
