crates/backyard-lexer/tests/snapshots/lexer__slash.snap
---
source: crates/backyard-lexer/tests/lexer.rs
expression: tokens
snapshot_kind: text
---
- token_type: Variable
  value:
    - 97
  line: 1
  column: 0
  offset: 0
- token_type: Assignment
  value:
    - 61
  line: 1
  column: 3
  offset: 3
- token_type: Variable
  value:
    - 98
  line: 1
  column: 5
  offset: 5
- token_type: Division
  value:
    - 47
  line: 1
  column: 8
  offset: 8
- token_type: Variable
  value:
    - 99
  line: 1
  column: 10
  offset: 10
- token_type: Semicolon
  value:
    - 59
  line: 1
  column: 12
  offset: 12
